--- a/app/index.html
+++ b/app/index.html
@@ -2,14 +2,79 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content="William IEHL portfolio" />
     <!--build:css css/styles.min.css-->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <!--endbuild-->
-    <title>Tada</title>
+    <title>&lt;Hello/&gt;</title>
   </head>
   <body>
-    
+    <header class="panel header">
+      <div class="header__wrapper">
+        <h1 class="header__title">William IEHL</h1>
+        <p class="header__subline">Front end developper, enthusiast hacker</p>
+        <a class="header__button" href="#projects">Projects</a>
+      </div>
+
+      <nav class="navbar">
+        <ul class="navbar__list">
+          <li class="navbar__items">
+            <a href="">Projects</a>
+          </li>
+          <li class="navbar__items">
+            <a href="">Toolbox</a>
+          </li>
+          <li class="navbar__items">
+            <a href="">Blogposts</a>
+          </li>
+          <li class="navbar__items">
+            <a href="">Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+
+    <section class="panel project">
+      <h2 class="panel__title">Projects</h2>
+      <div class="project__wrapper">
+        <div class="project__left">
+          <h3 class="project__title">Be Skatin'</h3>
+          <p class="project__text">
+            Blah blahblah blashalk lkalq qlkwje qwlkejq wqekfdsf qweek ad s qw wq kej lqwe. Blah blahblah blashalk lkalq qlkwje qwlkejq wqekfdsf qweek ad s qw wq kej lqwe. Blah blahblah blashalk lkalq qlkwje qwlkejq wqekfdsf qweek ad s qw wq kej lqwe.
+            <ul>
+              <li>item 1</li>
+              <li>item 2</li>
+              <li>item 3</li>
+              <li>item 4</li>
+            </ul>
+            blask asd qw we riuewriu s qweiu wwq asdiuqw osadiou s qweiu wwq asdiuqw osadiou s qweiu wwq asdiuqw osadiou
+          </p>
+        </div>
+
+        <div class="project__right">
+          <img class="project__img" src="" alt="">
+          <div class="project__tools">
+            <h3 class="project__subtitle">Tools</h3>
+          </div>
+          <img src="" alt="" />
+        </div> <!-- /end project__right -->
+      </div> <!-- /end project__wrapper -->
+    </section> <!-- /end project -->
+
+    <section class="panel tools">
+      <h2 class="panel__title">Toolbox</h2>
+    </section>
+
+    <section class="panel blog">
+      <h2 class="panel__title">Blogposts</h2>
+    </section> <!-- /end blog -->
+
+    <section class="panel contact">
+      <h2 class="panel__title">Contact</h2>
+    </section> <!-- /end contact -->
+
     <!--build:js js/main.min.js -->
     <script src="js/main.js"></script>
     <!-- endbuild -->
