Finished header and nav"

--- a/app/index.html
+++ b/app/index.html
@@ -27,7 +27,7 @@
       
       <i class="navbar__hamburger fa fa-bars fa-lg" aria-hidden="true"></i>
       <nav class="navbar__nav">
-        <ul class="navbar__list">
+        <ul class="navbar__list js-collapse">
           <li class="navbar__items">
             <a href="#projects">Projects</a>
           </li>
