--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="William IEHL portfolio" />
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:700|Roboto:400,400i,700" rel="stylesheet">
     <!--build:css css/styles.min.css-->
     <link rel="stylesheet" href="css/styles.css">
     <!--endbuild-->
@@ -23,23 +24,17 @@
         <li class="navbar__socialitems"><a href="https://twitter.com/www_iehl" target="_blank"><img src="img/twitter.png" alt="twitter" /></a></li>
         <li class="navbar__socialitems"><a href="https://www.facebook.com/www.iehl" target="_blank"><img src="img/facebook.png" alt="facebook" /></a></li>
         <li class="navbar__socialitems"><a href="https://github.com/fANZYo" target="_blank"><img src="img/github.png" alt="github" /></a></li>
-      </ul>
+      </ul><!--
       
-      <i class="navbar__hamburger fa fa-bars fa-lg" aria-hidden="true"></i>
+      --><div class="navbar__hamburger ">
+        <i class="fa fa-bars fa-lg" aria-hidden="true"></i>
+      </div>
       <nav class="navbar__nav">
         <ul class="navbar__list js-collapse">
-          <li class="navbar__items">
-            <a href="#projects">Projects</a>
-          </li>
-          <li class="navbar__items">
-            <a href="#tools">Toolbox</a>
-          </li>
-          <li class="navbar__items">
-            <a href="#blog">Blogposts</a>
-          </li>
-          <li class="navbar__items">
-            <a href="#contact">Contact</a>
-          </li>
+          <a href="#projects"><li class="navbar__items">Projects</li></a>
+          <a href="#tools"><li class="navbar__items">Toolbox</li></a>
+          <a href="#blog"><li class="navbar__items">Blogposts</li></a>
+          <a href="#contact"><li class="navbar__items">Contact</li></a>
         </ul>
       </nav>
     </section> <!-- /end navbar -->
@@ -66,6 +61,32 @@
 
         <div class="project__right">
           <img class="project__img" src="img/beskatin-sm.jpg" alt="beskatin">
+          <div class="project__tools">
+            <h4 class="project__subtitle">Tools</h4>
+          </div>
+        </div> <!-- /end project__right -->
+      </div> <!-- /end project__wrapper -->
+
+      <div class="project__wrapper">
+        <div class="project__left">
+          <h3 class="project__title">Ipro.digital</h3>
+
+          <p class="project__text">Blah blahblah blashalk lkalq qlkwje qwlkejq wqekfdsf qweek ad s qw wq kej lqwe. Blah blahblah blashalk.</p>
+
+          <div class="project__items">lorem ipsum:
+            <ul class="project__list">
+              <li class="project__listitem">item 1</li>
+              <li class="project__listitem">item 2</li>
+              <li class="project__listitem">item 3</li>
+              <li class="project__listitem">item 4</li>
+            </ul>
+          </div>
+
+          <p>blask asd qw we riuewriu s qweiu wwq asdiuqw osadiou s qweiu ww.</p>
+        </div> <!-- /end project__left -->
+
+        <div class="project__right">
+          <img class="project__img" src="img/ipro-sm.jpg" alt="ipro.digital">
           <div class="project__tools">
             <h4 class="project__subtitle">Tools</h4>
           </div>
