--- a/app/index.html
+++ b/app/index.html
@@ -21,9 +21,9 @@
 
     <section class="navbar">
       <ul class="navbar__socials">
-        <li class="navbar__socialitems"><a href="https://twitter.com/www_iehl" target="_blank"><img src="img/twitter.png" alt="twitter" /></a></li>
-        <li class="navbar__socialitems"><a href="https://www.facebook.com/www.iehl" target="_blank"><img src="img/facebook.png" alt="facebook" /></a></li>
-        <li class="navbar__socialitems"><a href="https://github.com/fANZYo" target="_blank"><img src="img/github.png" alt="github" /></a></li>
+        <li class="navbar__socialitems"><a href="https://twitter.com/www_iehl" target="_blank"><img src="img/socials/twitter.png" alt="twitter" /></a></li>
+        <li class="navbar__socialitems"><a href="https://www.facebook.com/www.iehl" target="_blank"><img src="img/socials/facebook.png" alt="facebook" /></a></li>
+        <li class="navbar__socialitems"><a href="https://github.com/fANZYo" target="_blank"><img src="img/socials/github.png" alt="github" /></a></li>
       </ul><!--
       
       --><div class="navbar__hamburger ">
@@ -58,7 +58,7 @@
         </div> <!-- /end project__left -->
 
         <div class="project__right">
-          <img class="project__img" src="img/beskatin-mockup.jpg" alt="beskatin">
+          <img class="project__img" src="img/projects/beskatin-mockup.jpg" alt="beskatin">
           <div class="project__tools">
             <h4 class="project__subtitle">Tools:</h4>
             <ul class="project__toolList">
@@ -86,7 +86,7 @@
         </div> <!-- /end project__left -->
 
         <div class="project__right">
-          <img class="project__img" src="img/ipro-mockup.jpg" alt="ipro.digital">
+          <img class="project__img" src="img/projects/ipro-mockup.jpg" alt="ipro.digital">
           <div class="project__tools">
             <h4 class="project__subtitle">Tools:</h4>
             <ul class="project__toolList">
