Fix #1 tool list background color

--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
     <!--build:css css/styles.min.css-->
     <link rel="stylesheet" href="css/styles.css">
     <!--endbuild-->
-    <title>&lt;Hello/&gt;</title>
+    <title>William IEHL</title>
   </head>
   <body>
     <header class="panel header">
