Fix #2 Clickable projects

--- a/app/index.html
+++ b/app/index.html
@@ -58,7 +58,7 @@
         </div> <!-- /end project__left -->
 
         <div class="project__right">
-          <img class="project__img" src="img/projects/beskatin-mockup.jpg" alt="beskatin">
+          <a href="http://beskatin.co.uk" target="_blank"><img class="project__img" src="img/projects/beskatin-mockup.jpg" alt="beskatin"></a>
           <div class="project__tools">
             <h4 class="project__subtitle">Tools:</h4>
             <ul class="project__toolList">
@@ -86,7 +86,7 @@
         </div> <!-- /end project__left -->
 
         <div class="project__right">
-          <img class="project__img" src="img/projects/ipro-mockup.jpg" alt="ipro.digital">
+          <a href="http://ipro.digital" target="_blank"><img class="project__img" src="img/projects/ipro-mockup.jpg" alt="ipro.digital"></a>
           <div class="project__tools">
             <h4 class="project__subtitle">Tools:</h4>
             <ul class="project__toolList">
