--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,6 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
-    <div id="root">{{SSR}}</div>
+    <div id="root"></div>
   </body>
 </html>
